assets/css/styles.css
/* ... */
@media screen and (max-width: 60rem) {
  :root {
    --s3: 1rem;
    --max-width: 100%;
    --f1: 1.728rem;
    --f2: 1.44rem;
    --f3: 1.2rem;
  }

  .nl {
    text-decoration: underline;
  }

  #container {
    grid-template-columns: 100%;
  }

  #header,
  #sidebar {
    border-right: 0;
    border-bottom: var(--border) solid var(--fg);
  }

  #navbar,
  #sidebar {
    padding: 0 var(--s2);
    border-right: 0;
  }

  #sidebar {
    white-space: nowrap;
    overflow: auto;
    grid-row: 4;
    border-top: var(--border) solid var(--fg);
  }

  #sidebar p {
    display: inline;
    margin-right: var(--s2);
  }

  #sidebar ul {
    display: inline;
  }

  #navbar a {
    padding: var(--s2) 0;
    flex-shrink: 0;
    border-bottom: 2px solid transparent;
  }

  #navbar a[aria-current='page'] {
    border-color: var(--c);
  }

  #sidebar ul li {
    display: inline-block;
    margin: 0;
  }

  #sidebar ul li a {
    display: inline-block;
    padding: var(--s2) 0;
    margin-right: var(--s2);
  }

  #footer {
    grid-column: auto;
  }

  .tb li {
    display: flow-root;
  }

  .tb li > * {
    text-wrap: wrap;
  }
}

@media print {
  html,
  body,
  #container {
    background: white;
    font-size: 11pt;
    border: 0;
  }

  .container {
    width: 100%;
    max-width: 100%;
    margin: 0;
    padding: 0;
  }

  #header,
  #navbar,
  #sidebar,
  #footer {
    display: none;
  }

  a:hover {
    background: none;
  }
}

